<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25304136" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:textSize="60sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical3"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal1"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="3dp"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/ac"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/shape_button"
        android:textStyle="bold"
        android:textColor="@color/rill_white"
        android:textSize="25sp"
        app:layout_goneMarginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/persen"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/bagi"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/x"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical4"
        />

<!--    baris kedua-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_7"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_8"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_9"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/plus"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal3"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical4"
        />

<!--    baris ketiga-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_4"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal4"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_5"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal4"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_6"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal4"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/kurang"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal4"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical4"
        />

<!--    baris keempat-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_1"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal5"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_2"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal5"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/_3"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal5"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        />

<!--    baris kelima-->

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="180dp"
        android:layout_height="85dp"
        android:text="@string/_0"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal6"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:text="@string/titik"
        android:padding="10dp"
        android:background="@drawable/shape_white"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal6"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="85dp"
        android:layout_height="180dp"
        android:text="@string/sama_dengan"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/rill_white"
        android:textSize="25sp"
        android:background="@drawable/shape_button"
        android:layout_marginStart="5dp"
        android:elevation="10dp"
        android:translationZ="10dp"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal5"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical4"
        />

</androidx.constraintlayout.widget.ConstraintLayout>